--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
-.orange-background {
-  background-color: orange;
-
-  
+.gradient-background {
+    background: linear-gradient(300deg, #ff6b6b, #0ea5a4, #feca57);
+    background-size: 180% 180%;
+    animation: gradient-animation 18s ease infinite;
 }
 
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
 
 h1,h2{
     font-style: italic;
